Posts to DB with valid key
Currently posting to DB and requires a valid key to do so. No settings so everything has to be configured in console.

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,8 @@
                         <div class="increment-button" onclick="incrementValue('numberOfCured')">+</div>
                     </div>
                 </div>
-                <div id="save-run-button">Save Run</div>
+                <div id="save-run-button" onclick="saveFarmData()">Save Run</div>
+                <div id="farm-run-error" style="display: none;"></div>
             </div>
             <!----------------------------------------------------------
             > Past Farm runs
