Added list that shows past farm runs

--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,18 @@
                     <div id="no-boost-runs" class="past-run-toggle-button" style="width: calc(33% - 13px)">None</div>
                     <div id="yes-boost-runs" class="past-run-toggle-button" style="width: calc(33% - 13px)">Attas Plant</div>
                 </div>
+                <div id="list-past-runs">
+                    <table>
+                        <thead>
+                            <th>Type</th>
+                            <th>Number of Herbs</th>
+                            <th>Profit</th>
+                        </thead>
+                        <tbody id="list-past-runs-body">
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <!----------------------------------------------------------
             > Settings
