--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,7 @@
                             <th>Type</th>
                             <th>Number of Herbs</th>
                             <th>Profit</th>
+                            <th>Attas</th>
                         </thead>
                         <tbody id="list-past-runs-body">
 
