Added titles to settings page

--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,7 @@
                         <input type="text" placeholder="Enter me!" id="settings-access-key">
                     </div>
                 </div>
+                <h4 class="sub-title">Herb Patch Settings</h4>
                 <!-- Number of patches -->
                 <div class="two-side-row">
                     <div class="left-side">Number of Patches:</div>
@@ -185,6 +186,8 @@
                         </select>
                     </div>
                 </div>
+
+                <h4 class="sub-title">Alarm Settings</h4>
                 <!-- Alarm -->
                 <div class="two-side-row">
                     <div class="left-side">Run Finished Alarm:</div>
