Added date to farm run list
v0.2.2
====
+ Date to farm run list
+ Days tracked to stats
+ Avg. Runs per day to stats
+ Profit per day to stats

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,7 @@
                             <th>Type</th>
                             <th>Number of Herbs</th>
                             <th>Profit</th>
+                            <th>Date</th>
                             <!-- <th>Attas</th> -->
                         </thead>
                         <tbody id="list-past-runs-body">
