Added best herb to farm
v0.2.8

+ Stats on herb herb to farm
- auto-increment version number

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <title id="windowTitle">Farm Tracker</title>
-        <!-- TODO add favicon-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <link rel="shortcut icon" type="image/png" href="./images/favicon.ico"/>
         <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -133,6 +132,15 @@
                             <div class="right-side" id="past-run-right-stats"></div>
                         </div>
                     </div>
+                </div>
+
+                <h3 class="toggle-button-info" id="pr-herb-type-title"></h3>
+                <p style="text-align:center;color:rgb(103, 103, 103);font-size:10pt;">The stats below show what herb would make you the most profit with your current average herbs per seed</p>
+                <div class="two-side-row-full">
+                        <div class="left-side" id="pr-herb-type-left" style="text-align:right">
+                        </div>
+                        <div class="right-side" id="pr-herb-type-right" style="color:rgb(80, 200, 255)">
+                        </div>
                 </div>
                 <!-- List of runs -->
                 <h3 class="toggle-button-info">List of all the runs</h3>
